--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 width: 150px !important;
             }
         }
-        @media (max-width: 764px) {
+        @media (max-width:px) {
             .cards-sec {
                 margin-bottom: 50px !important;
             }
