--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             .my-footer div {
                 margin-right: 20px !important;
             }
+            .log-sec {
+                margin-bottom:  150px !important;
+            }
             .log-img {
                 
                 transform: translate(0px, 100px);
@@ -307,9 +310,6 @@
                 padding-right: 40px !important;
             }
         }
-        @media (max-width: 350px) {
-
-        }
         @media (max-width: 378px) {
             .manage-cards .card {
                 gap: 6px !important;
@@ -321,7 +321,23 @@
                 font-size: 10px;
             }
         }
+        @media (max-width: 355px) {
+            .log-sec + section {
+                width: 100% !important;
+                padding: 0 !important;
+                gap: 0 !important;
+            }
+            .my-row,
+            .my-row div {
+                gap: 0px !important;
+            }
+            .helping-div img {
+                width: 35px !important;
+                height: 35px !important;
+            }
+        }
         @media (max-width: 320px) {
+            
             .my-card img{
                 width: 180px !important;
             }
@@ -494,8 +510,8 @@
                 <h2>Helping a local<br><span class="text-success">business reinvent itself</span></h2>
                 <p>We reached here with our hard work and dedication</p>
             </div>
-            <div class="d-flex flex-column gap-3">
-                <div class="d-flex gap-5">
+            <div class="d-flex flex-column gap-3 helping-div">
+                <div class="d-flex gap-5 my-row">
                     <div class="d-flex gap-2">
                         <img src="./Images/helping Icon1.png" alt="" width="50" height="50">
                         <div class="text-center">
@@ -511,7 +527,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex gap-5 mt-3">
+                <div class="d-flex gap-5 mt-3 my-row">
                     <div class="d-flex gap-2">
                         <img src="./Images/helping Icon2.png" alt="" width="50" height="50">
                         <div class="text-center">
